--- a/notebooks/IT24101205_Feature_Selection_DimRed.ipynb
+++ b/notebooks/IT24101205_Feature_Selection_DimRed.ipynb
@@ -2,11 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "61524e86-88d1-4de2-af31-8522223e70f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(70000, 19)\n",
+      "['Chest_Pain', 'Shortness_of_Breath', 'Fatigue', 'Palpitations', 'Dizziness', 'Swelling', 'Pain_Arms_Jaw_Back', 'Cold_Sweats_Nausea', 'High_BP', 'High_Cholesterol', 'Diabetes', 'Smoking', 'Obesity', 'Sedentary_Lifestyle', 'Family_History', 'Chronic_Stress', 'Gender', 'Age', 'Heart_Risk']\n",
+      "Heart_Risk\n",
+      "0.0    0.5\n",
+      "1.0    0.5\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('../data/raw/heart_disease_risk.csv')\n",
+    "print(df.shape)  # Expected: (70000, 18)\n",
+    "print(df.columns.tolist())  # Features: ['Age', 'Sex', 'ChestPain', 'Cholesterol', 'BloodPressure', 'Smoking', 'Obesity', 'ShortnessOfBreath', 'Glucose', 'BMI', 'Diabetes', 'FamilyHistory', 'PhysicalActivity', 'Diet', 'StressLevel', 'SleepHours', 'SedentaryHours', 'Heart_Risk']\n",
+    "print(df['Heart_Risk'].value_counts(normalize=True))  # Target: Binary (0 = Low Risk, 1 = High Risk), ~balanced"
+   ]
   }
  ],
  "metadata": {
@@ -25,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
