--- a/notebooks/IT24101236_Feature_Engineering .ipynb
+++ b/notebooks/IT24101236_Feature_Engineering .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "07b176da-db31-4d71-9b20-aecdd314f704",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cfc1a72f-d697-430a-b657-bec39183b4b3",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
    ],
    "source": [
     "# Load the dataset\n",
-    "df = pd.read_csv(\"/heart_disease_risk.csv\")\n",
+    "df = pd.read_csv(\"C:/Users/Janidu/2025-Y2-S1-MLB-B6G1-05-PGNO-105/data/raw/heart_disease_risk.csv\")\n",
     "\n",
     "# Display basic information\n",
     "print(f\"Original shape: {df.shape}\")\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1f8ae546-23d6-45f1-82db-85bd78ebefa1",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "42dd0eb1-40f5-48bd-9678-a0191435a6ee",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8f872175-cae2-4c0f-bcc8-392d6fbbd0c7",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "52d85e03-b28a-4c8f-820e-c8c9cc5ff28e",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2182f2bb-ac9c-4188-8bca-eede4a90772c",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "842d357f-6e84-413c-970b-52f134b06b51",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "91ec9325-47f7-45c2-be36-99711128a3ed",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b0daf4e0-785d-4a1c-b4b5-e2e0211c194d",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "674bbb58-b77b-407c-bfee-267ced50b40b",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2b7072d8-d17e-4453-80bf-949e54718b69",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "040fde6e-6b3e-4a8c-9cff-82e4b1bf0cf3",
    "metadata": {},
    "outputs": [
@@ -422,14 +422,6 @@
     "df_engineered.to_csv('C:/Users/Janidu/2025-Y2-S1-MLB-B6G1-05-PGNO-105/results/outputs/IT24101236_FeatureEngineering.csv', index=False)\n",
     "print(f\"\\nEngineered dataset saved with shape: {df_engineered.shape}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64e978ff-1660-41d3-9f92-7447a263a97f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
